--- a/src/interface/constraintactivitiessamestartinghourform_template.ui
+++ b/src/interface/constraintactivitiessamestartinghourform_template.ui
@@ -6,15 +6,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>531</width>
-    <height>463</height>
+    <width>578</width>
+    <height>547</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string extracomment="This is the title of the dialog to see the list of all constraints of this type">Constraints activities same starting hour</string>
   </property>
-  <layout class="QGridLayout" name="gridLayout">
-   <item row="0" column="0" colspan="2">
+  <layout class="QGridLayout" name="gridLayout_2">
+   <item row="0" column="0">
     <layout class="QVBoxLayout" name="verticalLayout_2">
      <item>
       <widget class="QLabel" name="constraintsTextLabel">
@@ -37,7 +37,7 @@
      </item>
     </layout>
    </item>
-   <item row="0" column="2" colspan="2">
+   <item row="0" column="1">
     <layout class="QVBoxLayout" name="verticalLayout">
      <item>
       <widget class="QLabel" name="currentConstraintTextLabel">
@@ -52,30 +52,95 @@
      <item>
       <widget class="QPlainTextEdit" name="currentConstraintTextEdit"/>
      </item>
+     <item>
+      <widget class="QGroupBox" name="filterGroupBox_2">
+       <property name="title">
+        <string>Filter</string>
+       </property>
+       <layout class="QGridLayout" name="gridLayout">
+        <item row="0" column="0">
+         <widget class="QLabel" name="teachersTextLabel">
+          <property name="text">
+           <string>Teacher</string>
+          </property>
+          <property name="wordWrap">
+           <bool>false</bool>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="0">
+         <widget class="QComboBox" name="teachersComboBox"/>
+        </item>
+        <item row="2" column="0">
+         <widget class="QLabel" name="studentsTextLabel">
+          <property name="text">
+           <string>Students set</string>
+          </property>
+          <property name="wordWrap">
+           <bool>false</bool>
+          </property>
+         </widget>
+        </item>
+        <item row="3" column="0">
+         <widget class="QComboBox" name="studentsComboBox"/>
+        </item>
+        <item row="4" column="0">
+         <widget class="QLabel" name="subjectsTextLabel">
+          <property name="text">
+           <string>Subject</string>
+          </property>
+          <property name="wordWrap">
+           <bool>false</bool>
+          </property>
+         </widget>
+        </item>
+        <item row="5" column="0">
+         <widget class="QComboBox" name="subjectsComboBox"/>
+        </item>
+        <item row="6" column="0">
+         <widget class="QLabel" name="activityTagsTextLabel">
+          <property name="text">
+           <string>Activity tag</string>
+          </property>
+          <property name="wordWrap">
+           <bool>false</bool>
+          </property>
+         </widget>
+        </item>
+        <item row="7" column="0">
+         <widget class="QComboBox" name="activityTagsComboBox"/>
+        </item>
+       </layout>
+      </widget>
+     </item>
     </layout>
    </item>
-   <item row="1" column="0">
-    <widget class="QPushButton" name="addConstraintPushButton">
-     <property name="text">
-      <string>Add</string>
-     </property>
-    </widget>
+   <item row="1" column="0" colspan="2">
+    <layout class="QHBoxLayout" name="horizontalLayout">
+     <item>
+      <widget class="QPushButton" name="addConstraintPushButton">
+       <property name="text">
+        <string>Add</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="modifyConstraintPushButton">
+       <property name="text">
+        <string>Modify</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="removeConstraintPushButton">
+       <property name="text">
+        <string>Remove</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
    </item>
-   <item row="1" column="1" colspan="2">
-    <widget class="QPushButton" name="modifyConstraintPushButton">
-     <property name="text">
-      <string>Modify</string>
-     </property>
-    </widget>
-   </item>
-   <item row="1" column="3">
-    <widget class="QPushButton" name="removeConstraintPushButton">
-     <property name="text">
-      <string>Remove</string>
-     </property>
-    </widget>
-   </item>
-   <item row="2" column="1" colspan="2">
+   <item row="2" column="0" colspan="2">
     <widget class="QPushButton" name="closePushButton">
      <property name="text">
       <string>Close</string>
