--- a/src/interface/constrainttwoactivitiesorderedform_template.ui
+++ b/src/interface/constrainttwoactivitiesorderedform_template.ui
@@ -6,14 +6,14 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>537</width>
-    <height>488</height>
+    <width>598</width>
+    <height>584</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string extracomment="This is the title of the dialog in which you see the list of all constraints of this type">Constraints two activies ordered</string>
   </property>
-  <layout class="QGridLayout" name="gridLayout">
+  <layout class="QGridLayout" name="gridLayout_2">
    <item row="0" column="0" colspan="2">
     <widget class="QLabel" name="textLabel1">
      <property name="sizePolicy">
@@ -67,6 +67,67 @@
      </item>
      <item>
       <widget class="QPlainTextEdit" name="currentConstraintTextEdit"/>
+     </item>
+     <item>
+      <widget class="QGroupBox" name="filterGroupBox_2">
+       <property name="title">
+        <string>Filter</string>
+       </property>
+       <layout class="QGridLayout" name="gridLayout">
+        <item row="0" column="0">
+         <widget class="QLabel" name="teachersTextLabel">
+          <property name="text">
+           <string>Teacher</string>
+          </property>
+          <property name="wordWrap">
+           <bool>false</bool>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="0">
+         <widget class="QComboBox" name="teachersComboBox"/>
+        </item>
+        <item row="2" column="0">
+         <widget class="QLabel" name="studentsTextLabel">
+          <property name="text">
+           <string>Students set</string>
+          </property>
+          <property name="wordWrap">
+           <bool>false</bool>
+          </property>
+         </widget>
+        </item>
+        <item row="3" column="0">
+         <widget class="QComboBox" name="studentsComboBox"/>
+        </item>
+        <item row="4" column="0">
+         <widget class="QLabel" name="subjectsTextLabel">
+          <property name="text">
+           <string>Subject</string>
+          </property>
+          <property name="wordWrap">
+           <bool>false</bool>
+          </property>
+         </widget>
+        </item>
+        <item row="5" column="0">
+         <widget class="QComboBox" name="subjectsComboBox"/>
+        </item>
+        <item row="6" column="0">
+         <widget class="QLabel" name="activityTagsTextLabel">
+          <property name="text">
+           <string>Activity tag</string>
+          </property>
+          <property name="wordWrap">
+           <bool>false</bool>
+          </property>
+         </widget>
+        </item>
+        <item row="7" column="0">
+         <widget class="QComboBox" name="activityTagsComboBox"/>
+        </item>
+       </layout>
+      </widget>
      </item>
     </layout>
    </item>
