Upgrade to FET 5.32.0

--- a/src/interface/timetableviewstudentsdayshorizontalform_template.ui
+++ b/src/interface/timetableviewstudentsdayshorizontalform_template.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>TimetableViewStudentsForm_template</class>
- <widget class="QDialog" name="TimetableViewStudentsForm_template">
+ <class>TimetableViewStudentsDaysHorizontalForm_template</class>
+ <widget class="QDialog" name="TimetableViewStudentsDaysHorizontalForm_template">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string extracomment="Title of dialog">View students timetable</string>
+   <string extracomment="Title of dialog">View students days horizontal timetable</string>
   </property>
   <layout class="QGridLayout" name="gridLayout_2">
    <item row="0" column="0">
