--- a/src/interface/timetableviewteachersdayshorizontalform_template.ui
+++ b/src/interface/timetableviewteachersdayshorizontalform_template.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>TimetableViewTeachersForm_template</class>
- <widget class="QDialog" name="TimetableViewTeachersForm_template">
+ <class>TimetableViewTeachersDaysHorizontalForm_template</class>
+ <widget class="QDialog" name="TimetableViewTeachersDaysHorizontalForm_template">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string extracomment="Title of dialog to view the teachers timetable">View teachers timetable</string>
+   <string extracomment="Title of dialog to view the teachers timetable">View teachers days horizontal timetable</string>
   </property>
   <layout class="QGridLayout" name="gridLayout_2">
    <item row="0" column="0">
